thêm packge kèm tên dự án