@@ -1,6 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>dat.nx.doanjava</groupId>
+  <groupId>dat.nx.sanbongdaquoc</groupId>
   <artifactId>QLSanBongDaQuoc_64130299</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
@@ -34,17 +36,18 @@
         </dependency>
     </dependencies>
     <build>
-    <build>
     <plugins>
         <plugin>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
+            <artifactId>dat.nx.sanbongdaquoc</artifactId>
             <version>0.0.8</version>
             <configuration>
-                <mainClass>Main</mainClass>
+                <mainClass>app.Main</mainClass>
+                <jvmArgs>
+                    --module-path "E:\javafx-sdk-23\lib" --add-modules javafx.controls,javafx.fxml
+                </jvmArgs>
             </configuration>
         </plugin>
     </plugins>
-</build>
 </build>
 </project>
